--- a/contact.html
+++ b/contact.html
@@ -55,10 +55,10 @@
                     <input type="email" name="email" placeholder="Votre email" required>
                     <input type="tel" name="telephone" placeholder="Votre téléphone">
                     <textarea name="message" placeholder="Votre message" required></textarea>
-                    <button type="submit" class="btn-commander">Envoyer</button>
+                    <button a href="index.html" type="submit" class="btn-commander">Envoyer</button>
                 </form>
-            </div>
         </div>
+     </div>
     </section>
     
 </body>
