--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                     <input type="email" name="email" placeholder="Votre email" required>
                     <input type="tel" name="telephone" placeholder="Votre téléphone">
                     <textarea name="message" placeholder="Votre message" required></textarea>
-                    <button a href="index.html" type="submit" class="btn-commander">Envoyer</button>
+                    <button a href="env_mail.php" type="submit" class="btn-commander">Envoyer</button>
                 </form>
         </div>
      </div>
