Update and rename env_mail.php to env_mail.html

--- a/env_mail.html
+++ b/env_mail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Message Envoyé</title>
-  <style>
+    <style>
         body {
             display: flex;
             justify-content: center;
@@ -44,10 +44,8 @@
 </head>
 <body>
     <div class="message">
-        <?php 
-            echo "Votre message a bien été envoyé, il sera traité au plus vite."; 
-        ?>
-  </div>
+        Votre message a bien été envoyé, il sera traité au plus vite.
+    </div>
     <a href="index.html" class="btn-retour">Retour à l'accueil</a>
 </body>
 </html>
