--- a/contact.html
+++ b/contact.html
@@ -50,17 +50,16 @@
 
             <div class="carte-contact">
                 <h3>Envoyez-nous un message</h3>
-                <form class="contact-form" action="env_mail.php" method="POST">
+                <form class="contact-form" >
                     <input type="text" name="nom" placeholder="Votre nom" required>
                     <input type="email" name="email" placeholder="Votre email" required>
                     <input type="tel" name="telephone" placeholder="Votre téléphone">
                     <textarea name="message" placeholder="Votre message" required></textarea>
-                    <button a href="env_mail.php" type="submit" class="btn-commander">Envoyer</button>
-                </form>
+                    <a href="env_mail.html" button  type="submit" class="btn-commander">Envoyer</button>
+              </form>
+            </div>
         </div>
-     </div>
     </section>
-    
 </body>
 </html>
 
