--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="index.html">Site</a></li>
             <li><a href="#" onclick="deconnexion()">Déconnexion</a></li>
-        </ul>
+          </ul>
     </nav>
 
     
@@ -22,11 +22,11 @@
         <div class="conteneur-admin">
             <h1>Gestion des Commandes</h1>
             <div id="liste-commandes">
-                <!-- Les commandes seront ajoutées ici dynamiquement -->
+                <!-- Les commandes seront  ici  -->
             </div>
         </div>
     </section>
 
     <script src="admin.js"></script>
-</body>
+ </body>
 </html>
