--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PizzaDélice - Contact</title>
+    <title>Home Pizza - Contact</title>
     <link rel="stylesheet" href="jnr.css">
 </head>
 <body>
@@ -62,7 +62,7 @@
             </div>
             <script>
                 function verifierEtRediriger() {
-                    let form = document.getElementById("contactForm");
+                     let form = document.getElementById("contactForm");
                     if (form.checkValidity()) {
                         window.location.href = 'env_mail.html';
                 } else {
