--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li><a href="index.html">Accueil</a></li>
             <li><a href="#menu">Menu</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="panier.html" class="panier">Panier (<span id="nombre-panier">0</span>)</a></li>
+            <li><a href="panier.html" class="panier">Panier </li>
         </ul>
     </nav>
 
