--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
             <li><a href="index.html">Accueil</a></li>
              <li><a href="index.html#menu">Menu</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="panier.html" class="panier">Panier (0)</a></li>
+            <li><a href="panier.html" class="panier">Panier </a></li>
         </ul>
     </nav>
 
