--- a/confirmation.html
+++ b/confirmation.html
@@ -13,7 +13,7 @@
             <li><a href="index.html">Accueil</a></li>
             <li><a href="index.html#menu">Menu</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="panier.html" class="panier">Panier </li>
+            <li><a href="panier.html" class="panier">Panier  (<span id="panier-count">0</span>)</a> </li>
         </ul>
     </nav>
 
